# 0_Practice_pdm

./: README.md  mi_primer_codigo.py  pyproject.toml
src/: untitled1.py
